--- a/httpd/httpd.conf
+++ b/httpd/httpd.conf
@@ -3,21 +3,20 @@ Listen 8080
 LoadModule unixd_module /usr/libexec/apache2/mod_unixd.so
 LoadModule mpm_prefork_module /usr/libexec/apache2/mod_mpm_prefork.so
 LoadModule authz_core_module /usr/libexec/apache2/mod_authz_core.so
-LoadModule perl_module /usr/libexec/apache2/mod_perl.so
 LoadModule log_config_module /usr/libexec/apache2/mod_log_config.so
 LoadModule alias_module /usr/libexec/apache2/mod_alias.so
 LoadModule cgi_module /usr/libexec/apache2/mod_cgi.so
 PidFile httpd.pid
-DocumentRoot web
+DocumentRoot /var/www/htdocs
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog logs/access_log common
 
-ScriptAlias /cgi-bin/ /Users/uekikazuki/Projects/github.com/ueki-kazuki/backend-engineer/httpd/web/cgi-bin/
+ScriptAlias /cgi-bin/ /var/www/cgi-bin/
 
-<Directory /Users/uekikazuki/Projects/github.com/ueki-kazuki/backend-engineer/httpd/web>
+<Directory /var/www/htdocs>
 AllowOverride ALL
 </Directory>
-<Directory /Users/uekikazuki/Projects/github.com/ueki-kazuki/backend-engineer/httpd/web/cgi-bin>
+<Directory /var/www/cgi-bin>
 Options +ExecCGI
 #SetHandler perl-script
 #PerlHandler Apache::Registry
