httpd をマルチプロセスで実行する

--- a/httpd/httpd.conf
+++ b/httpd/httpd.conf
@@ -20,3 +20,7 @@ AllowOverride ALL
 <Directory /var/www/cgi-bin>
 Options +ExecCGI
 </Directory>
+
+StartServers       2
+MinSpareServers    2
+MaxSpareServers   10
